--- a/Week5 Vue延伸套件/cart.html
+++ b/Week5 Vue延伸套件/cart.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="mt-4">
                 <!-- 產品Modal -->
-                <user-product-modal :product="product" ref="userProductModal" @add-cart="addToCart">
+                <user-product-modal :product="product" ref="userProductModal" @add-to-cart="addToCart">
                 </user-product-modal>
                 <!-- 產品Modal -->
 
